--- a/Rozpoznavani_reci/Whisper/requirements.txt
+++ b/Rozpoznavani_reci/Whisper/requirements.txt
@@ -1,5 +1,5 @@
 pyaudio
-SpeechRecognition
+speechrecognition
 --extra-index-url https://download.pytorch.org/whl/cu116
 torch
 git+https://github.com/openai/whisper.git
